...

    Scaffold(
        modifier = modifier,
        snackbarHost = { SnackbarHost(snackbarHostState) },
        topBar = {
            CleanArchTopAppBar(
                title = "Checklists",
                actions = {
                    if (uiState is ChecklistListUiState.Content) {
                        SyncStateIndicator(
                            syncState = uiState.syncState,
                            modifier = Modifier
                                .padding(end = 8.dp)
...
